umstellung des startscripts auf classpath